kubernetes/cluster/default/longhorn/keda-http-interceptor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keda-http-interceptor
  namespace: longhorn-system
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local.
  ports:
    - name: http
      port: 8080
    - name: https
      port: 8443
