kubernetes/cluster/default/longhorn/ingress.yaml
# NOTE:
#   - creating standalone ingress config because annotations are not applied
#   - ingress docs: https://longhorn.io/docs/1.6.1/deploy/accessing-the-ui/longhorn-ingress/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  labels:
    app: longhorn-ingress
    app.kubernetes.io/name: longhorn
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://longhorn.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: longhorn.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.brhd.io
